fixed js readable content namespace on accordion

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,6 +3,8 @@
 // Base
 @import 'globals';
 
+$namespace: '';
+
 // Configurations
 @import 'configurations/grid/grid';
 @import 'configurations/colors/colors';
